--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Edger webpage</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav id="navbar">
+                <h1>
+                    <i class="fa fa-book-open primary-text"></i><span class="primary-text"> Edge</span> Ledger
+                </h1>
+                <ul id="flex-item-nav">
+                    <li class="flex-item-li"><a href="home.html">Home</a></li>
+                    <li class="flex-item-li"><a href="home.html">About</a></li>
+                    <li class="flex-item-li"><a href="home.html">Cases</a></li>
+                    <li class="flex-item-li"><a href="home.html">Blog</a></li>
+                    <li class="flex-item-li"><a href="home.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div id="sideshow">
+                <div id="content-sideshow">
+                    <div id="sideshow-content">
+                        <h1>The <span class="primary-text">Sky</span> Is The <span class="primary-text">Limit</span></h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, inventore!</p>
+                        <a href="about.html" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                            <i class="fas fa-angle-right"></i> Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
