--- a/index.html
+++ b/index.html
@@ -9,32 +9,64 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav id="navbar">
-                <h1>
-                    <i class="fa fa-book-open primary-text"></i><span class="primary-text"> Edge</span> Ledger
-                </h1>
-                <ul id="flex-item-nav">
-                    <li class="flex-item-li"><a href="home.html">Home</a></li>
-                    <li class="flex-item-li"><a href="home.html">About</a></li>
-                    <li class="flex-item-li"><a href="home.html">Cases</a></li>
-                    <li class="flex-item-li"><a href="home.html">Blog</a></li>
-                    <li class="flex-item-li"><a href="home.html">Contact</a></li>
-                </ul>
-            </nav>
-            <div id="sideshow">
-                <div id="content-sideshow">
-                    <div id="sideshow-content">
-                        <h1>The <span class="primary-text">Sky</span> Is The <span class="primary-text">Limit</span></h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, inventore!</p>
-                        <a href="about.html" target="_blank" rel="noopener noreferrer" class="btn-primary">
-                            <i class="fas fa-angle-right"></i> Read More
-                        </a>
-                    </div>
+    <header class="container">
+        <nav id="navbar">
+            <h1>
+                <i class="fa fa-book-open primary-text"></i><span class="primary-text"> Edge</span> Ledger
+            </h1>
+            <ul id="flex-item-nav">
+                <li class="flex-item-li"><a href="home.html">Home</a></li>
+                <li class="flex-item-li"><a href="aoubt.html">About</a></li>
+                <li class="flex-item-li"><a href="case.html">Cases</a></li>
+                <li class="flex-item-li"><a href="blog.html">Blog</a></li>
+                <li class="flex-item-li"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="sideshow">
+            <div id="content-sideshow">
+                <div id="sideshow-content">
+                    <h1>The <span class="primary-text">Sky</span> Is The <span class="primary-text">Limit</span></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, inventore!</p>
+                    <a href="about.html" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                        <i class="fas fa-angle-right"></i> Read More
+                    </a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="box">
+        <div class="box-items">
+            <i class="far fa-building"></i>
+            <h4> Company </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, doloribus?</p>
+        </div>
+        <div class="box-items">
+            <i class="fas fa-money-bill-wave"></i>
+            <h4> Financial Condition</h4>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, voluptatem.</p>
+        </div>
+        <div class="box-items">
+            <i class="fas fa-bullseye"></i>
+            <h4> Our purpose </h4>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, aliquid.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="column">
+            <div class="column-1">
+                <img src="./images/home/people.jpg" alt="">
+            </div>
+        </div>
+        <div class="column">
+            <div class="column-2">
+                <h3> About Us </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam perferendis, rem nesciunt mollitia omnis optio cumque quas placeat inventore quod?</p>
+                <a class="btn-transparant" href="#"> Read More </a>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
