adding blog and Participation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,67 @@
             </div>
         </div>
     </div>
+
+    <section id="cases">
+        <header id="header-cases">
+            <h4> This is sample </h4>
+            <h1> Business Cases </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, ullam.</p>
+        </header>
+        <div class="flex-row">
+            <div class="flex-column">
+                <img src="./images/cases/cases1.jpg" alt="">
+                <img src="./images/cases/cases2.jpg" alt="">
+            </div>
+            <div class="flex-column">
+                <img src="./images/cases/cases3.jpg" alt="">
+                <img src="./images/cases/cases4.jpg" alt="">
+            </div>
+            <div class="flex-column">
+                <img src="./images/cases/cases5.jpg" alt="">
+                <img src="./images/cases/cases6.jpg" alt="">
+            </div>
+            <div class="flex-column">
+                <img src="./images/cases/cases7.jpg" alt="">
+                <img src="./images/cases/cases8.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <div class="row">
+        <div class="column">
+            <div class="column-2">
+                <h4>April 20-21</h4>
+                <h2> Our Blog </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam perferendis, rem nesciunt mollitia omnis optio cumque quas placeat inventore quod?</p>
+                <a class="btn-transparant" href="#"> Read More </a>
+            </div>
+        </div>
+        <div class="column blog-pic">
+            <div class="column-1">
+                <img src="./images/home/blog.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box-items">
+            <img src="./images/team/person1.jpg" alt="">
+            <h4> Head Manger </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, doloribus?</p>
+        </div>
+        <div class="box-items">
+            <img src="./images/team/person2.jpg" alt="">
+            <h4> CEO </h4>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, voluptatem.</p>
+        </div>
+        <div class="box-items">
+            <img src="./images/team/person3.jpg" alt="">
+            <h4> Digital marketer </h4>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, aliquid.</p>
+        </div>
+    </div>
+    
     
 </body>
 </html>
