compeleting main content of index

--- a/index.html
+++ b/index.html
@@ -129,8 +129,28 @@
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, aliquid.</p>
             </div>
         </div>
-        
     </section>
+
+    <div class="row">
+        <div class="column">
+            <div class="column-1">
+                <img src="./images/home/contact.jpg" alt="">
+            </div>
+        </div>
+        <div class="column" id="contact-us">
+            <div class="column-2">
+                <h2> Contact Us </h2>
+                <form action="">
+                    <label for="Name">Name </label>
+                    <input type="text" >
+                    <label for="Name">Last Name </label>
+                    <input type="text">
+                    <label for="Name">Email </label>
+                    <button type="submit" id="confirmation"> Confirm </button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
