--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                     <label for="Name">Last Name </label>
                     <input type="text">
                     <label for="Name">Email </label>
+                    <input type="email" name="email" id="email">
                     <button type="submit" id="confirmation"> Confirm </button>
                 </form>
             </div>
