adding footer to our file

--- a/index.html
+++ b/index.html
@@ -153,5 +153,14 @@
         </div>
     </div>
 
+    <footer>
+        <h2 id="social-media">
+            <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true" id="facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x" aria-hidden="true" id="twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x" aria-hidden="true" id="linkedin"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x" aria-hidden="true" id="youtube"></i></a>
+        </h2>
+        <p>Copy Right &copy; Reserved for EdgeLedger</p>
+    </footer>
 </body>
 </html>
